# cnr_soem

./: LICENSE  README.md
coe_core/: CMakeLists.txt  README.md  coe_coreConfig.cmake.in  coe_coreConfigVersion.cmake.in  package.xml
coe_core/include/coe_core/: coe_base.h  coe_cob_types.h  coe_pdo.h  coe_sdo.h  coe_string_utilities.h  coe_utilities.h
coe_core/include/coe_core/ds301/: coe_bitwise_struct.h  coe_sdo_dictionary.h
coe_core/include/coe_core/ds402/: coe_bitwise_struct.h  coe_sdo_dictionary.h  coe_xfsm_sequence.h  coe_xfsm_symbols.h  coe_xfsm_utilities.h
coe_core/include/coe_core/impl/: coe_pdo_impl.hpp
coe_core/include/coe_core/modules/: coe_driver_bitwise_struct.h  coe_io_bitwise_struct.h
coe_core/include/coe_core/modules/impl/: coe_io_bitwise_struct_impl.h
coe_core/src/coe_core/: coe_base.cpp  coe_pdo.cpp  coe_string_utilities.cpp
coe_core/src/coe_core/ds301/: coe_bitwise_struct.cpp
coe_core/src/coe_core/ds402/: coe_bitwise_struct.cpp  coe_pdo.cpp  coe_xfsm_utilities.cpp
coe_master/: CMakeLists.txt  analyzer_plugins.xml  coe_masterConfig.cmake.in  coe_masterConfigVersion.cmake.in  package.xml
coe_master/examples/: sdo_server_client_example.cpp
coe_master/include/coe_master/: coe_master.h  coe_master_fsm.h  coe_master_utilities.h
coe_master/include/coe_master/hw_plugin/: coe_hw_base_plugin.h  coe_hw_base_plugin_impl.hpp
coe_master/include/coe_master/ipc/: coe_ipc.h  pdo_ipc.h  sdo_ipc.h  sdo_ipc_msgs.h
coe_master/include/coe_master/ipc/utilities/: asio_utilities.h
coe_master/include/coe_master/modules/: coe_module_descriptor.h  coe_module_descriptor_data.h  coe_network_descriptor.h  coe_network_descriptor_data.h  coe_pdo_data.h  coe_sdo_data.h  coe_srv_utilities.h
coe_master/include/coe_master/modules/utilities/: common.h
coe_master/include/coe_master/po2so_callback/: po2so_callbacks.h  po2so_module.h
coe_master/src/coe_master/: coe_driver_network_info.cpp  coe_master.cpp  coe_module_descriptor.cpp  coe_network_descriptor.cpp
coe_master/src/coe_master/ipc/: ipc.cpp  pdo_ipc.cpp  sdo_ipc.cpp
coe_master/src/coe_master/po2so_callback/: po2so_callbacks.cpp
coe_master/test/ipc/: test_ipc.cpp
coe_soem_utilities/: CMakeLists.txt  README.md  coe_soem_utilitiesConfig.cmake.in  coe_soem_utilitiesConfigVersion.cmake.in  package.xml
coe_soem_utilities/cmake/: cnrConfigMacros.cmake
coe_soem_utilities/include/coe_soem_utilities/: coe_soem_utilities.h
coe_soem_utilities/src/coe_soem_utilities/: coe_soem_utilities.cpp
