<?xml version="2.0"?>
<package>
  <name>coe_core</name>
  <version>0.0.0</version>
  <description>The coe_core package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="iras@itia.cnr.it">Jane Doe</maintainer> -->
  <maintainer email="lagrange@todo.todo">lagrange</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>cnr_param</build_depend>
  <run_depend>cnr_param</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
