<?xml version="1.0"?>
<package format="2">
  <name>coe_soem_utilities</name>
  <version>0.0.0</version>
  <description>The coe_soem_utilities package</description>

  <maintainer email="iras@itia.cnr.it">nichols</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>coe_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>boost</build_export_depend>
  <build_export_depend>coe_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>coe_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  
   
   
   

</package>
